# Evoke

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/api/: router.go
backend/internal/api/handlers/: audio.go  board.go  demo.go  health.go
backend/internal/config/: config.go
backend/internal/services/: cache.go  milvus.go  ml_client.go
backend/internal/vectorstore/: vectorstore.go
backend/proto/: ml_service.pb.go  ml_service_grpc.pb.go
docs/: ENHANCEMENT_PLAN.md  Interview_Strategy.md
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AudioUploader.tsx  ImageCard.tsx  MoodBoard.tsx  MoodSliders.tsx  WaveformPlayer.tsx
frontend/src/hooks/: useAudioAnalysis.ts  useMoodBoard.ts
frontend/src/styles/: global.css
frontend/src/types/: index.ts
ml/: Dockerfile  pyproject.toml
ml/protos/: ml_service.proto  ml_service_pb2.py  ml_service_pb2_grpc.py
ml/src/: __init__.py  audio_encoder.py  bridge.py  config.py  http_server.py  server.py
scripts/: download_models.sh  precompute.py  seed_milvus.py
worker/: package.json  tsconfig.json  wrangler.toml
worker/src/: index.ts
worker/src/lib/: ml-client.ts  types.ts  vectorstore.ts
worker/src/routes/: analyze.ts  demo.ts  health.ts  refine.ts
